@@ -70,42 +70,41 @@ public class Tests {
     assertEquals(Integer.valueOf(15), p1.product(p2).getCoordY());
   }
 
-  /*
   @Test
   public void testQuestion3() {
 
     final Matrix<Integer> integerMatrix1 = new Matrix<>(
-          Arrays.asList(-1, 5, 8, -42));
+            Arrays.asList(-1, 5, 8, -42));
     final Matrix<Integer> integerMatrix2 = new Matrix<>(
-          Arrays.asList(2, 0, -4, 127));
+            Arrays.asList(2, 0, -4, 127));
 
     final Matrix<String> stringMatrix1 = new Matrix<>(
-          Arrays.asList("hi", "fi", "wi", "fi"));
+            Arrays.asList("hi", "fi", "wi", "fi"));
     final Matrix<String> stringMatrix2 = new Matrix<>(
-          Arrays.asList("si", "fi", "py", "py"));
+            Arrays.asList("si", "fi", "py", "py"));
 
     final Matrix<Boolean> booleanMatrix1 = new Matrix<>(
-          Arrays.asList(true, false, false, false, true, false, false, false, true));
+            Arrays.asList(true, false, false, false, true, false, false, false, true));
     final Matrix<Boolean> booleanMatrix2 = new Matrix<>(
-          Arrays.asList(true, false, true, false, true, false, true, true, false));
+            Arrays.asList(true, false, true, false, true, false, true, true, false));
 
     final Matrix<Integer> integerMatrixMaxSum =
-          integerMatrix1.sum(integerMatrix2, Math::max);
-    assertEquals(new Integer(2), integerMatrixMaxSum.get(0, 0));
-    assertEquals(new Integer(5), integerMatrixMaxSum.get(0, 1));
-    assertEquals(new Integer(8), integerMatrixMaxSum.get(1, 0));
-    assertEquals(new Integer(127), integerMatrixMaxSum.get(1, 1));
+            integerMatrix1.sum(integerMatrix2, Math::max);
+    assertEquals(Integer.valueOf(2), integerMatrixMaxSum.get(0, 0));
+    assertEquals(Integer.valueOf(5), integerMatrixMaxSum.get(0, 1));
+    assertEquals(Integer.valueOf(8), integerMatrixMaxSum.get(1, 0));
+    assertEquals(Integer.valueOf(127), integerMatrixMaxSum.get(1, 1));
 
     final Matrix<String> stringMatrixProduct =
-          stringMatrix1.product(stringMatrix2, String::concat,
-                (a, b) -> a + "!" + b);
+            stringMatrix1.product(stringMatrix2, String::concat,
+                    (a, b) -> a + "!" + b);
     assertEquals("hi!sifi!py", stringMatrixProduct.get(0, 0));
     assertEquals("hi!fifi!py", stringMatrixProduct.get(0, 1));
     assertEquals("wi!sifi!py", stringMatrixProduct.get(1, 0));
     assertEquals("wi!fifi!py", stringMatrixProduct.get(1, 1));
 
     final Matrix<Boolean> booleanMatrixProduct =
-          booleanMatrix1.product(booleanMatrix2, Boolean::logicalOr, Boolean::logicalAnd);
+            booleanMatrix1.product(booleanMatrix2, Boolean::logicalOr, Boolean::logicalAnd);
     assertEquals(true, booleanMatrixProduct.get(0, 0));
     assertEquals(false, booleanMatrixProduct.get(0, 1));
     assertEquals(true, booleanMatrixProduct.get(0, 2));
@@ -117,7 +116,6 @@ public class Tests {
     assertEquals(false, booleanMatrixProduct.get(2, 2));
 
   }
-  */
 
   /*
   @Test
